# crypto_market_data_handler

./: CMakeLists.txt  Main.cpp  README.md
Core/: AtomicGuard.hpp  TaskRunner.cpp  TaskRunner.hpp
DataStore/: DataPair.cpp  DataPair.hpp  DataPoint.hpp  DataStore.cpp  DataStore.hpp  NoAtomicDataPair.hpp
ExchangeSocket/: BinanceSocket.cpp  IExchangeSocket.hpp  KucoinSocket.cpp  TestSocket.cpp  TestSocket2.cpp
Front/: CliFront.cpp  IFront.hpp  ReaderManager.cpp  ReaderManager.hpp
Loader/: Loader.cpp  Loader.hpp
